Add "makefile" way of compiling - add a Makefile in every required folder - add a configure file - add manifests and other files for generating the .jar