@@ -1,6 +1,17 @@
 # GUI-Pipeline-Launcher
 GUI for launching steps of a pipeline
 
+# Dependencies:
+- Java (linux: OpenJDK)
+- JavaFX (linux: OpenJFX)
+
+# How to launch:
+
+java --module-path /usr/share/openjfx/lib      \
+     --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,\
+javafx.media,javafx.swing,javafx.web           \
+     -jar GUI-Process-Launcher.jar
+
 # Contributors:
 - BOISSIER Fabrice (Project Leader & Architecture) [2023-...]
 - AMOVIN Ivance (Architecture & Design & Developper) [2023-2024]
